# lsimons-llm

./: .gitignore  .mise.toml  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
lsimons_llm/: __init__.py  async_client.py  client.py  config.py  exceptions.py
tests/: test_async_client.py  test_client.py  test_config.py  test_exceptions.py
