[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsimons-llm"
version = "0.1.0"
description = "Shared LLM client library for OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
]
authors = [
    { name = "lsimons" }
]

[project.optional-dependencies]
async = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
include = ["lsimons_llm*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "basedpyright>=1.22.0",
    "openai>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=lsimons_llm --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.uv]
exclude-newer = "1 week"
